Give hero sections equal width and stop button stretching

--- a/style.css
+++ b/style.css
@@ -43,22 +43,38 @@ button, .call-to-action {
     background-color: #3882F6;
 }
 
+.hero-img {
+    width: 50%;
+}
+
 .hero-img img {
-    width: 500px;
+    max-width: 100%;
+    height: 100%;
+}
+
+.hero-text button {
+    align-self: start;
+}
+
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 50%;
 }
 
 button {
     cursor: pointer;
     color: white;
     border: 1px solid #3882F6;
-    padding: 5px 10px;
+    padding: 5px 20px;
     border-radius: 5px;
     font-weight: bold;
 }
 
 .hero {
     display: flex;
-    gap: 15px;
+    gap: 30px;
 }
 
 .call-right button {
@@ -75,10 +91,11 @@ button {
     flex-direction: column;
     padding-left: 100px;
     padding-right: 100px;
-    padding-top: 20px;
-    padding-bottom: 100px;
-    gap: 40px;
+    padding-top: 25px;
+    gap: 100px;
 }
+
+
 
 .links {
     display: flex;
